--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1990,9 +1990,9 @@
     <!-- Sound & display settings screen, setting option summary to change the user interface theme [CHAR LIMIT=100] -->
     <string name="night_mode_summary">%s</string>
     <!-- Sound & display settings screen, theme setting value to prefer a light-colored user interface [CHAR LIMIT=30] -->
-    <string name="night_mode_no">Light</string>
+    <string name="night_mode_no">Stock</string>
     <!-- Sound & display settings screen, theme setting value to prefer a dark-colored user interface [CHAR LIMIT=30] -->
-    <string name="night_mode_yes">Dark</string>
+    <string name="night_mode_yes">Tesla</string>
     <!-- Sound & display settings screen, theme setting value to automatically switch between a light- or dark-colored user interface [CHAR LIMIT=30] -->
     <string name="night_mode_auto">Automatic</string>
     <!-- Sound & display settings screen, setting option name to change screen timeout -->
